[package]
name = "keyfreak"
version = "0.1.0"
authors = ["Eli Yukelzon <reflog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.4.5"
once_cell = "1.4.1"
serde_json = "1.0.57"
xcb = "0.9.0"
byteorder = "1.3.4"
simple_excel_writer = "0.1.7"
log = "0.4.11"
[dependencies.simple_logger]
default-features = false
version = "1.9.0"